@@ -37,8 +37,8 @@
       <operations public="false" package="false" protected="false" private="false" static="false"/>    
     </display>  
   </class>  
-  <class id="5" language="java" name="druckvorschau.Druckvorschau" project="esadb" 
-    file="/esadb/src/druckvorschau/Druckvorschau.java" binary="false" corner="BOTTOM_RIGHT">    
+  <class id="5" language="java" name="printPreview.PrintPreview" project="esadb" 
+    file="/esadb/src/printPreview/PrintPreview.java" binary="false" corner="BOTTOM_RIGHT">    
     <position height="-1" width="-1" x="-500" y="29"/>    
     <display autosize="true" stereotype="true" package="true" initial-value="false" signature="true" accessors="true" 
       visibility="true">      
@@ -46,7 +46,7 @@
       <operations public="false" package="false" protected="false" private="false" static="false"/>    
     </display>  
   </class>  
-  <class id="6" language="java" name="druckvorschau.Seite" project="esadb" file="/esadb/src/druckvorschau/Seite.java" 
+  <class id="6" language="java" name="printPreview.Page" project="esadb" file="/esadb/src/printPreview/Page.java" 
     binary="false" corner="BOTTOM_RIGHT">    
     <position height="-1" width="-1" x="-143" y="29"/>    
     <display autosize="true" stereotype="true" package="true" initial-value="false" signature="true" accessors="true" 
@@ -55,8 +55,8 @@
       <operations public="false" package="false" protected="false" private="false" static="false"/>    
     </display>  
   </class>  
-  <class id="7" language="java" name="druckvorschau.Seitenanzeige" project="esadb" 
-    file="/esadb/src/druckvorschau/Seitenanzeige.java" binary="false" corner="BOTTOM_RIGHT">    
+  <class id="7" language="java" name="printPreview.PageView" project="esadb" 
+    file="/esadb/src/printPreview/PageView.java" binary="false" corner="BOTTOM_RIGHT">    
     <position height="-1" width="-1" x="-324" y="29"/>    
     <display autosize="true" stereotype="true" package="true" initial-value="false" signature="true" accessors="true" 
       visibility="true">      
@@ -601,7 +601,7 @@
   </realization>  
   <association id="126">    
     <end type="SOURCE" refId="7" navigable="false">      
-      <attribute id="127" name="seiten"/>      
+      <attribute id="127" name="pages"/>      
       <multiplicity id="128" minimum="0" maximum="2147483647"/>    
     </end>    
     <end type="TARGET" refId="6" navigable="true"/>    
