@@ -27,3 +27,4 @@
  - Geschlecht "beliebig" für Mannschaften ergänzt.
  - Schriften für die Styles Plain, Italic und Italic-Bold ergänzt.
  - Bei alter oder fehlerhafter Konfiguration wird nun die Standardkonfiguration geladen.
+ - Ergebnisliste kann konfiguriert werden (Disziplin(en), Gruppen , Geschlecht).
